# niuniuBot

./: .env  .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
database/: niuniubot.db-shm  niuniubot.db-wal
src/plugins/5k/: __init__.py  generator.py
src/plugins/cf/: __init__.py
src/plugins/faker/: __init__.py
src/plugins/huangmao/: __init__.py
src/plugins/jibuji/: __init__.py
src/plugins/niuniu/: __init__.py
src/plugins/pjsk/: __init__.py
src/plugins/pushpush/: __init__.py
src/plugins/pushpush/models/: pushaccount.py  pushgroup.py  pushperson.py
src/plugins/setu/: __init__.py
src/plugins/slecy/: __init__.py
src/plugins/tongsini/: __init__.py
